Changelog
=========

1.2 - Unreleased
----------------

* Rewrote the `maintenance/sync` method for more performance and dropped the
  optional `path` restriction from it.
  [hannosch]

* Changed the `maintenance/reindex` method to only flush data to Solr but not
  commit after each batch. Instead we only commit once at the end. You should
  configure auto commit policies on the Solr server side.
  [hannosch]

* Adjusted the `mangleQuery` function to calculate extended path indexes from
  the Solr schema instead of hardcoding `path`. You need to provide indexers
  with the same three suffixes as we do ourselves in the `attributes` module
  for the `path` index and add those to the Solr schema.
  [hannosch]

* Changed the names of the indexes used to emulate the `path` index. You need
  to adjust your schema and rename `physicalPath` to `path_string`, 
  `physicalDepth` to `path_depth` and `parentPaths` to `path_parents`.
  [hannosch]

1.1 - Released March 17, 2011
-----------------------------

* add uninstall profile [kiorky]

* still index, if a field can't be accessed
  [tom_gross]

* Fix the pretty_title_or_id method from PloneFlare; the implementation
  was broken, now delegates to the standard Plone implementation.
  [mj]


1.0 - Released September 14, 2010
---------------------------------

* Enable multi-field "fq" statements.
  [tesdal, witsch]

* Prevent logging of "unknown" search attributes for `use_solr` and the
  infamous `-C` Zope startup parameter.
  [witsch]


1.0rc3 - Released September 9, 2010
-----------------------------------

* Add logging of queries without explicit "rows" parameter.
  [witsch]

* Add configuration to exclude user from ``allowedRolesAndUsers`` for
  better cacheability.
  [tesdal, witsch]

* Add configuration for effective date steps.
  [tesdal, witsch]

* Handle python `datetime` and `date` objects.
  [do3cc, witsch]

* Fixed a grammar error in ``error.pt``.
  [hannosch]


1.0rc2 - Released August 31, 2010