@@ -13,6 +13,7 @@ collective.recipe.solrinstance = svn https://svn.plone.org/svn/collective/buildo
 [versions]
 zc.buildout =
 Markdown =
+Unidecode = 0.04.1
 
 [alltests]
 recipe = collective.recipe.template
